# tree-sitter-usl

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example.usl  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-usl.pc.in
bindings/go/: .gitignore  binding.go  binding_test.go  go.mod
bindings/node/: .gitignore  binding.cc  binding.gyp  index.js  package-lock.json  package.json
bindings/python/: .gitignore  setup.py
bindings/python/tree_sitter_usl/: __init__.py  binding.c
bindings/rust/: Cargo.toml  build.rs  lib.rs
bindings/swift/: .gitignore  Package.swift
bindings/swift/TreeSitterUsl/: usl.h
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: annotations.txt  entities.txt  enums.txt  functions.txt  interfaces.txt  modules.txt  package.txt  types.txt
