[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-usl"
version = "0.1.0"
description = "Tree-sitter grammar for USL (Universal Structure Language)"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["incremental", "parsing", "tree-sitter", "usl"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-usl"
